msa/vivaldi/be-common/500-vivaldi-be-common-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-common
  labels:
    app: be-common
    version: 1.0.0
    release: vivaldi
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: be-common
